# oauth-sandbox

./: README.md  biome.jsonc  lefthook.yml
backend/: README.md  db.sqlite3  pyproject.toml
backend/app/: settings.py  urls.py
backend/oauth/: models.py  urls.py  views.py
backend/oauth/migrations/: 0001_initial.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx
